[gd_scene load_steps=16 format=2]

[ext_resource path="res://Jogo.gd" type="Script" id=1]
[ext_resource path="res://ParallaxBackground.gd" type="Script" id=2]
[ext_resource path="res://Sprites/parallax-space-backgound.png" type="Texture" id=3]
[ext_resource path="res://Sprites/parallax-space-big-planet.png" type="Texture" id=4]
[ext_resource path="res://Sprites/parallax-space-ring-planet.png" type="Texture" id=5]
[ext_resource path="res://Sprites/parallax-space-far-planets.png" type="Texture" id=6]
[ext_resource path="res://Sprites/parallax-space-stars.png" type="Texture" id=7]
[ext_resource path="res://Player.tscn" type="PackedScene" id=8]
[ext_resource path="res://Fontes/Doubledecker DEMO.otf" type="DynamicFontData" id=9]
[ext_resource path="res://Fontes/Fox Cavalier.otf" type="DynamicFontData" id=10]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.305882, 0.945098, 0, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.568627, 0.568627, 0.568627, 1 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 150.803 )

[sub_resource type="DynamicFont" id=4]
resource_local_to_scene = true
size = 29
outline_size = 15
outline_color = Color( 0.796078, 0.796078, 0.796078, 1 )
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 10 )

[node name="Jogo" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource( 2 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 1, 0 )
motion_mirroring = Vector2( 0, 600 )

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
margin_left = 3.34036
margin_top = 3.34036
margin_right = 43.3404
margin_bottom = 43.3404
rect_scale = Vector2( 9.96439, 14.9738 )
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
scale = Vector2( 1.8669, 2.37889 )
motion_mirroring = Vector2( 0, 600 )

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/ParallaxLayer2"]
margin_left = 27.7335
margin_top = 44.9334
margin_right = 115.734
margin_bottom = 131.933
rect_scale = Vector2( 0.781885, 0.503144 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 0, 600 )

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/ParallaxLayer3"]
margin_left = 194.207
margin_top = 182.968
margin_right = 245.207
margin_bottom = 298.968
rect_scale = Vector2( 3.59601, 1.04744 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParallaxLayer4" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2( 8.35089, 11.6913 )
motion_mirroring = Vector2( 0, 600 )

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/ParallaxLayer4"]
margin_left = 36.744
margin_top = 303.973
margin_right = 308.744
margin_bottom = 463.973
texture = ExtResource( 6 )

[node name="ParallaxLayer5" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 0, 600 )

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/ParallaxLayer5"]
margin_left = 3.77972
margin_top = 156.71
margin_right = 403.78
margin_bottom = 436.71
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParallaxLayer6" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 0, 600 )

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/ParallaxLayer6"]
margin_left = 6.52441
margin_top = 0.952866
margin_right = 410.524
margin_bottom = 197.953
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParallaxLayer7" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 0, 600 )

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/ParallaxLayer7"]
margin_left = -2.0
margin_top = 434.0
margin_right = 400.0
margin_bottom = 594.0
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0

[node name="Life" type="ProgressBar" parent="."]
margin_left = 37.0
margin_top = 11.0
margin_right = 374.0
margin_bottom = 24.0
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="block" type="StaticBody2D" parent="."]
position = Vector2( -18.05, 316.35 )
collision_layer = 2
collision_mask = 0

[node name="shape" type="CollisionShape2D" parent="block"]
position = Vector2( 10.7425, 132.586 )
shape = SubResource( 3 )

[node name="block2" type="StaticBody2D" parent="."]
position = Vector2( -18.05, 316.35 )
collision_layer = 2
collision_mask = 0

[node name="shape" type="CollisionShape2D" parent="block2"]
position = Vector2( 428.763, 133.542 )
shape = SubResource( 3 )

[node name="Player" parent="." instance=ExtResource( 8 )]
position = Vector2( 228.81, 542.814 )

[node name="score" type="Label" parent="."]
margin_left = 323.0
margin_top = 35.0
margin_right = 354.0
margin_bottom = 53.0
text = "000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="scoreTime" type="Timer" parent="score"]

[node name="GO_menu" type="Control" parent="."]
visible = false
margin_left = 91.3593
margin_top = 30.5646
margin_right = 131.359
margin_bottom = 70.5646

[node name="GAME OVER!" type="Label" parent="GO_menu"]
margin_left = 43.1307
margin_top = 91.8099
margin_right = 187.131
margin_bottom = 126.81
custom_fonts/font = SubResource( 4 )
text = "GAME OVER!!"
uppercase = true

[node name="Button" type="Button" parent="GO_menu"]
margin_left = 78.9902
margin_top = 158.733
margin_right = 141.99
margin_bottom = 190.733
custom_fonts/font = SubResource( 5 )
text = "MENU"

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="score/scoreTime" to="." method="_on_scoreTime_timeout"]
